source/_patterns/04-templates/content-stream/_content-stream.scss
.jcc-content-stream {
  @include u-margin-bottom(8);

  .jcc-section__inner {
    @include u-padding-left(0);
  }

  .jcc-cards {
    @include u-margin-top(0, !important);
    @include u-padding-left(2, !important);
  }

  .jcc-cards__item {
    @include u-width(full);
    @include u-margin-x(0);
    @include u-padding-left(0);
    @include u-padding-right(0);
    @include u-padding-bottom(2);

    &:first-child {
      .usa-card--media-left {
        @include u-position(relative);
        left: -1rem;

        img {
          @include u-radius(md);
        }
      }
    }

    .usa-card__container {
      @include u-padding-x(0);
    }
  }

  .usa-card {
    @include u-margin-bottom(6);
  }

  .usa-card__media {
    @include u-width(mobile);

    span {
      @include u-display(inline-block);
      @include u-position(relative);
      @include add-aspect("4x3");
      @include u-width(full);
      @include u-overflow(hidden);

      img {
        @include u-position(absolute);
        @include u-width(full);
        @include u-top(0);
        @include u-left(0);
        object-fit: cover;
      }
    }
  }
}

